--- a/pom.xml
+++ b/pom.xml
@@ -102,5 +102,10 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.13.0</version>
 		</dependency>
+		<dependency>
+   			 <groupId>org.seleniumhq.selenium</groupId>
+    		<artifactId>selenium-java</artifactId>
+   			 <version>3.141.59</version>
+		</dependency>
 	</dependencies>
 </project>
