--- a/pom.xml
+++ b/pom.xml
@@ -107,5 +107,15 @@
     		<artifactId>selenium-java</artifactId>
    			 <version>3.141.59</version>
 		</dependency>
+		<dependency>
+   			 <groupId>org.rxtx</groupId>
+   			 <artifactId>rxtx</artifactId>
+   			 <version>2.1.7</version>
+		</dependency>
+		<dependency>
+   			 <groupId>org.python</groupId>
+   			 <artifactId>jython</artifactId>
+   			 <version>2.7.2</version>
+		</dependency>
 	</dependencies>
 </project>
