--- a/pom.xml
+++ b/pom.xml
@@ -112,10 +112,10 @@
    			 <artifactId>rxtx</artifactId>
    			 <version>2.1.7</version>
 		</dependency>
-		<dependency>
-   			 <groupId>org.python</groupId>
-   			 <artifactId>jython</artifactId>
-   			 <version>2.7.2</version>
-		</dependency>
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython-standalone</artifactId>
+            <version>2.7.1</version>
+        </dependency>
 	</dependencies>
 </project>
