--- a/pom.xml
+++ b/pom.xml
@@ -108,14 +108,19 @@
    			 <version>3.141.59</version>
 		</dependency>
 		<dependency>
-   			 <groupId>org.rxtx</groupId>
-   			 <artifactId>rxtx</artifactId>
-   			 <version>2.1.7</version>
+    		<groupId>org.scream3r</groupId>
+    		<artifactId>jssc</artifactId>
+    		<version>2.8.0</version>
 		</dependency>
         <dependency>
             <groupId>org.python</groupId>
             <artifactId>jython-standalone</artifactId>
             <version>2.7.1</version>
         </dependency>
+		<dependency>
+   	 		<groupId>org.bidib.com.serialpundit</groupId>
+    		<artifactId>sp-tty</artifactId>
+    		<version>1.0.4.1</version>
+		</dependency>
 	</dependencies>
 </project>
