--- a/pipeline.properties
+++ b/pipeline.properties
@@ -4,4 +4,4 @@
 #ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, Pankaj.Patil@commscope.com, sathish.ac@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, dharmender.kumar@mobileprogramming.com, gnanatejavarma.mantena@mobileprogrammingllc.com, namratha.prasad@commscope.com, tousif.ahmmad@commscope.com, prabhu.rajarathinam@mobileprogramming.com
 #ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, prabhu.rajarathinam@mobileprogramming.com
 #ANDROID_RECP=prabhu.rajarathinam@mobileprogramming.com
-ANDROID_RECP=akhtar.zaman@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, prabhu.rajarathinam@mobileprogramming.com
+ANDROID_RECP=akhtar.zaman@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, dharmender.kumar@mobileprogramming.com, prabhu.rajarathinam@mobileprogramming.com
