updated email list

--- a/pipeline.properties
+++ b/pipeline.properties
@@ -5,5 +5,5 @@
 #ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, prabhu.rajarathinam@mobileprogramming.com
 #ANDROID_RECP=prabhu.rajarathinam@mobileprogramming.com
 #ANDROID_RECP=akhtar.zaman@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, dharmender.kumar@mobileprogramming.com, prabhu.rajarathinam@mobileprogramming.com
-#ANDROID_RECP=jithendra.kumar@mobileprogrammingllc.com, dharmender.kumar@mobileprogramming.com, prabhu.rajarathinam@mobileprogramming.com
-ANDROID_RECP=prabhu.rajarathinam@mobileprogramming.com
+ANDROID_RECP=jithendra.kumar@mobileprogrammingllc.com, dharmender.kumar@mobileprogramming.com, prabhu.rajarathinam@mobileprogramming.com
+#ANDROID_RECP=prabhu.rajarathinam@mobileprogramming.com
