Restructed code for satellite OB

--- a/pom.xml
+++ b/pom.xml
@@ -122,5 +122,12 @@
     		<artifactId>sp-tty</artifactId>
     		<version>1.0.4.1</version>
 		</dependency>
+		<dependency>
+    		<groupId>com.sun.mail</groupId>
+    		<artifactId>javax.mail</artifactId>
+   	 		<version>1.6.2</version>
+		</dependency>
+
+
 	</dependencies>
 </project>
