--- a/pipeline.properties
+++ b/pipeline.properties
@@ -1,7 +1,7 @@
 #Email Reciepients
 #--------------
 #Specify the email ids of reciepients who should recieve the Jenkins Build statu
-#ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, Pankaj.Patil@commscope.com, sathish.ac@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, dharmender.kumar@mobileprogramming.com, gnanatejavarma.mantena@mobileprogrammingllc.com, namratha.prasad@commscope.com, tousif.ahmmad@commscope.com, prabhu.rajarathinam@mobileprogramming.com
-ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, jithendra.kumar@mobileprogrammingllc.com, dharmender.kumar@mobileprogramming.com, prabhu.rajarathinam@mobileprogramming.com
-#ANDROID_RECP=jithendra.kumar@mobileprogrammingllc.com, dharmender.kumar@mobileprogramming.com, prabhu.rajarathinam@mobileprogramming.com
+#ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, Pankaj.Patil@commscope.com, sathish.ac@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, gnanatejavarma.mantena@mobileprogrammingllc.com, namratha.prasad@commscope.com, tousif.ahmmad@commscope.com, prabhu.rajarathinam@mobileprogramming.com
+#ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, jithendra.kumar@mobileprogrammingllc.com, prabhu.rajarathinam@mobileprogramming.com
+ANDROID_RECP=jithendra.kumar@mobileprogrammingllc.com, prabhu.rajarathinam@mobileprogramming.com
 #ANDROID_RECP=prabhu.rajarathinam@mobileprogramming.com
