--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 						<version>2.22.2</version>
 						<configuration>
 							<suiteXmlFiles>
-								<suiteXmlFile>android_ST_testng.xml</suiteXmlFile>
+								<suiteXmlFile>android_testng.xml</suiteXmlFile>
 							</suiteXmlFiles>
 						</configuration>
 					</plugin>
