--- a/pipeline.properties
+++ b/pipeline.properties
@@ -3,5 +3,6 @@
 #Specify the email ids of reciepients who should recieve the Jenkins Build status
 #ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, Pankaj.Patil@commscope.com, sathish.ac@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, gnanatejavarma.mantena@mobileprogrammingllc.com, namratha.prasad@commscope.com, tousif.ahmmad@commscope.com, prabhu.rajarathinam@mobileprogramming.com
 #ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, jithendra.kumar@mobileprogrammingllc.com, prabhu.rajarathinam@mobileprogramming.com
-ANDROID_RECP=jithendra.kumar@mobileprogrammingllc.com, prabhu.rajarathinam@mobileprogramming.com
+#ANDROID_RECP=jithendra.kumar@mobileprogrammingllc.com, prabhu.rajarathinam@mobileprogramming.com
 #ANDROID_RECP=prabhu.rajarathinam@mobileprogramming.com
+ANDROID_RECP=akhtar.zaman@commscope.com, jala.ganapathy@commscope.com, vidya.lakshmanarao@commscope.com, Pankaj.Patil@commscope.com, sathish.ac@commscope.com, muralidharan.narayanan@commscope.com, anbarasan.paulraj@commscope.com, Amit.Srivastava@commscope.com, gokulakrishnan.vasudevan@commscope.com, jagdeep.shivajirao@commscope.com,jithendra.kumar@mobileprogrammingllc.com, dharmender.kumar@mobileprogramming.com,  gnanatejavarma.mantena@mobileprogrammingllc.com, prabhu.rajarathinam@mobileprogramming.com
